# SwiftLog

./: CMakeLists.txt  Package.swift  README.md
Sources/: Formatter.swift  LogTarget.swift  Logger.swift
Tests/: LinuxMain.swift
Tests/SwiftLog/: SwiftLogTests.swift
